--- a/src/assets/styles/navbar.scss
+++ b/src/assets/styles/navbar.scss
@@ -21,7 +21,7 @@
 
 .navbar {
     @apply flex flex-col fixed right-0;
-    width: 2px;
+    width: 0.4vw;
     min-height: 100vh;
     padding: 1rem 0;
     background: linear-gradient(135deg, transparent 0, transparent 5vw, var(--secondary) 0, var(--secondary) 100%);
